@@ -281,6 +281,10 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP236   (EXPERIMENTAL)(*2)
        Canon PIXMA MP237   (EXPERIMENTAL)(*2)
 
+       Canon MP260 series  (EXPERIMENTAL)
+       Canon PIXMA MP260   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP268   (EXPERIMENTAL)(*2)
+
        Canon MP270 series  (EXPERIMENTAL)
        Canon PIXMA MP270   (EXPERIMENTAL)(*2)
        Canon PIXUS MP270   (EXPERIMENTAL)(*2)
